Bug 72347, save runtime query to distributed cache whenever it is modified.