@@ -220,6 +220,7 @@ public class ScheduleClient {
       args.add("--add-opens=java.base/java.time=ALL-UNNAMED");
       args.add("--add-opens=java.base/java.text=ALL-UNNAMED");
       args.add("--add-opens=java.management/sun.management=ALL-UNNAMED");
+      args.add("--add-opens=java.desktop/java.awt=ALL-UNNAMED");
       args.add(sreeHome);
       args.add(headless);
       args.add("-jar");
